Update and rename gp_cover_txt.html to gp_cover.html

--- a/gp_cover.html
+++ b/gp_cover.html
@@ -7,8 +7,8 @@
           Case Problem 1
           
           Ghost of the Deep Cover Page
-          Author: 
-          Date:   
+          Author: Zack Zhao
+          Date:   2022-09-23
       
           Filename: gp_cover.html
          -->
