--- a/gp_page2.html
+++ b/gp_page2.html
@@ -7,8 +7,8 @@
           Case Problem 1
           
           Ghost of the Deep Page 2
-          Author: 
-          Date:   
+          Author: Zack Zhao
+          Date:   2022-09-23
       
           Filename: gp_page2.html
          -->
