Update and rename gp_page3_txt.html to gp_page3.html

--- a/gp_page3.html
+++ b/gp_page3.html
@@ -7,8 +7,8 @@
           Case Problem 1
           
           Ghost of the Deep Page 3
-          Author: 
-          Date:   
+          Author: Zack Zhao
+          Date:   2022-09-23
       
           Filename: gp_page3.html
          -->
