--- a/gp_page3.html
+++ b/gp_page3.html
@@ -15,6 +15,10 @@
    
    <title>Ghost of the Deep Page 3</title>
    <meta charset="utf-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link href="gp_reset.css" media="all" />
+   <link href="gp_layout.css" media="screen" />
+   <link href="gp_print.css" media="print" />
 
 </head>
 
