--- a/gp_page3.html
+++ b/gp_page3.html
@@ -16,9 +16,9 @@
    <title>Ghost of the Deep Page 3</title>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link href="gp_reset.css" media="all" />
-   <link href="gp_layout.css" media="screen" />
-   <link href="gp_print.css" media="print" />
+   <link href="gp_reset.css" rel="stylesheet" media="all" />
+   <link href="gp_layout.css" rel="stylesheet" media="screen" />
+   <link href="gp_print.css" rel="stylesheet" media="print" />
 
 </head>
 
